<resources>
    <string name="app_name">WhatsO</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="alreadyHaveAccount">Already have Account</string>
    <string name="doNotHaveAccount">Do not have account</string>
    <string name="signUp">SIGN UP</string>
    <string name="signIn">SIGN IN</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signUpWithPhone">Sign up with phone</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="enterMessage">Enter Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>